Added download file by orderId + hasInvoice indicator in normal Order Queries
